distortion solved

--- a/frontend/src/pages/Login/login.module.scss
+++ b/frontend/src/pages/Login/login.module.scss
@@ -32,7 +32,6 @@
 .login-card {
   width: 75%;
   height: auto;
-  padding: 0.75em;
   background-color: #e7e7e7;
   margin: 20% auto;
   border-radius: 10px;
